@@ -1,3 +1,8 @@
+Sat Oct 10 19:04:42 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/socket/udpsocket.c (udp_connect, udp_bind): get open files
+	  inside ensure functions.
+
 Sat Oct 10 18:35:12 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_insnhelper.c (vm_call_method0): do not propagate enable_fastpath,
